--- a/addons/cni-canal/canal.yaml
+++ b/addons/cni-canal/canal.yaml
@@ -65,7 +65,7 @@ data:
   # Flannel network configuration. Mounted into the flannel container.
   net-conf.json: |
     {
-      "Network": "{{ .Config.ClusterNetwork.PodSubnet }}",
+      "Network": "{{ takeCIDRn 0 .Config.ClusterNetwork.PodSubnet }}",
       "Backend": {
         "Type": "vxlan"
       }
@@ -4467,16 +4467,27 @@ spec:
             # chosen from this range. Changing this value after installation will have
             # no effect. This should fall within `--cluster-cidr`.
             - name: CALICO_IPV4POOL_CIDR
-              value: "{{ .Config.ClusterNetwork.PodSubnet }}"
+              value: "{{ takeCIDRn 0 .Config.ClusterNetwork.PodSubnet }}"
             # Disable file logging so `kubectl logs` works.
             - name: CALICO_DISABLE_FILE_LOGGING
               value: "true"
             # Set Felix endpoint to host default action to ACCEPT.
             - name: FELIX_DEFAULTENDPOINTTOHOSTACTION
               value: "ACCEPT"
+            {{ if eq .Config.ClusterNetwork.IPFamily "IPv4+IPv6" }}
+            - name: FELIX_IPV6SUPPORT
+              value: "true"
+            - name: IP6
+              value: "autodetect"
+            - name: IP6_AUTODETECTION_METHOD
+              value: "skip-interface=envoyagent"
+            - name: CALICO_IPV6POOL_CIDR
+              value: "{{ takeCIDRn 1 .Cluster.Network.PodCIDRIPv6 }}"
+            {{ else }}
             # Disable IPv6 on Kubernetes.
             - name: FELIX_IPV6SUPPORT
               value: "false"
+            {{ end }}
             - name: FELIX_HEALTHENABLED
               value: "true"
             - name: FELIX_IPTABLESBACKEND
