separate ipv4/ipv6 cidrs

--- a/addons/calico-vxlan/calico-vxlan.yaml
+++ b/addons/calico-vxlan/calico-vxlan.yaml
@@ -4467,11 +4467,13 @@ spec:
                 configMapKeyRef:
                   name: calico-config
                   key: veth_mtu
+            {{ if .Config.ClusterNetwork.HasIPv4 }}
             # The default IPv4 pool to create on startup if none exists. Pod IPs will be
             # chosen from this range. Changing this value after installation will have
             # no effect. This should fall within `--cluster-cidr`.
             - name: CALICO_IPV4POOL_CIDR
-              value: "{{ .Config.ClusterNetwork.PodSubnetIPv4 }}"
+              value: "{{ .Config.ClusterNetwork.PodSubnet }}"
+            {{ end }}
             # Disable file logging so `kubectl logs` works.
             - name: CALICO_DISABLE_FILE_LOGGING
               value: "true"
